<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.clothes.MainActivity">
    <item
        android:id="@+id/action_order"
        android:orderInCategory="100"
        android:title="@string/list_menu_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:onClick="help"
        android:orderInCategory="100"
        android:title="@string/list_menu_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:onClick="about"
        android:orderInCategory="100"
        android:title="@string/list_menu_about"
        app:showAsAction="never" />
</menu>

